# Catalog

./: Catalog.cabal  LICENSE  README.md
examples/: in.txt
exe/: Main.hs
src/: Catalog.hs
