name:                Catalog
version:             0.1.0.0
synopsis:			 Small program to process and display a custom catalog
-- description:
homepage:            https://github.com/githubuser/Catalog#readme
license:             BSD2
license-file:        LICENSE
author:              Albert R.
maintainer:          al@albertrg.info
copyright:           2020 Albert R.
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Catalog
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , pandoc
                     , pandoc-types
                     , split
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable Catalog
  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , Catalog	
                     , pandoc
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2


